# learnpino

./: CMakeLists.txt  README.md  build-reduced-model.cpp  overview-simple.cpp
model/: biped.urdf  ur5_robot.urdf
robotwrapper/: CMakeLists.txt  fwd.hpp  robotwrapper.cpp  robotwrapper.h
